2000-08-15  Kriston J. Rehberg  <Kriston@AOL.NET>

	* nsext: Ten guesses why $(NSHOME)/include/nsextmsg.h was
	duplicated here.

	* nssybpd: Hopefully, the log statements will be easier to
	understand by both admins and developers.  It's still messy since
	it uses syslog.  Makefile redone to use standard AOLserver rules.
	RPATH is used a little more intelligently.  Removed files that had
	no business living there.
	
	* include/Makefile.global: Took stab at RPATH support on Solaris
	to perhaps remove the need for LD_LIBRARY_PATH on an
	intelligenly-administered system.  New rule for libnspd.a.
	
	
2000-08-14  Kriston J. Rehberg  <Kriston@AOL.NET>

	* Makefile: nsvhr has been resurrected and enjoys our full
	support.

	* nsexample/Makefile: The include at the bottom wasn't using
	$(NSHOME).

2000-08-14  Jim Davidson

	* Tcl 8.x library upgraded to tcl8.3.2.

	* thread/pool.c: A spiffy range-checker added to the Zippy (-z)
	memory allocator.  Define NDEBUG=1 to enable.

2000-08-11  Kriston J. Rehberg  <Kriston@AOL.NET>

	* nsvhr/nsvhr.c: Always add "Connection: close" to the request
	line to satisfy HTTP 1.1 RFC -- this would break MSIE in HTTP 1.1
	mode.  HTTP_EOL of "\r\n" used on all request lines for stupid web
	servers on the other end.  Protocol "tcp" added as synonym of
	"http" for old-time Unix heads.  Lots of folks lended a hand on
	this one -- Satyam Priyadarshy, Jerry Asher, Kriston Rehberg, and
	special thanks to Wanda G. at AOL for adding a CNAME in DNS so
	quickly.

2000-08-09  Kriston J. Rehberg  <Kriston@AOL.NET>

	* nsd/serv.c: A whole lot less chatty about conns starting and
	exiting.  If you want to see them, turn on the Debug flag.

	* doc/*: lots of updates.  Title page extremely simplified.  SSL
	docs updated.  Release notes updated.  NSV docs corrected (thanks
	to Todd Levy <dcitodd@aol.com>).

2000-08-09  Jim Davidson <jgdavidson@aol.com>
	
	* tcl7.6/generic/tclFHandle.c: Removed needed fileTable which